--- a/src/app/modules/app.component.html
+++ b/src/app/modules/app.component.html
@@ -2,7 +2,7 @@
   <div fxFlex="100%" class="flex-wrapper">
     <div class="header">
       <!-- todo: use desktop and mobile header -->
-      <img src="assets/images/bg-header-desktop.svg">
+      <img src="assets/images/bg-header-desktop.svg" fxFlex>
     </div>
     <app-job-listings></app-job-listings>
   </div>
